--- a/noticias.html
+++ b/noticias.html
@@ -98,9 +98,66 @@
 				</div>		
 			</div>
 		</div>
-		<div class="row"></div>
-		<div class="row"></div>
-		<div class="row"></div>
+		<div class="row">
+			<div class="col-md-3 noticias-single">
+				<div class="noticias-titulo col-md-10 col-md-10">
+					<h6>Noticia 1</h6>
+					<p>Bajada de la noticia</p>
+				</div>	
+			</div>
+			<div class="col-md-3 noticias-single">
+				<div class="noticias-titulo col-md-10 col-md-10">
+					<h6>Noticia 1</h6>
+					<p>Bajada de la noticia</p>
+				</div>	
+			</div>
+			<div class="col-md-6 noticias-single">
+				<div class="noticias-titulo col-md-10 col-md-10">
+					<h6>Noticia 1</h6>
+					<p>Bajada de la noticia</p>
+				</div>	
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-5 noticias-single">
+				<div class="noticias-titulo col-md-10 col-md-10">
+					<h6>Noticia 1</h6>
+					<p>Bajada de la noticia</p>
+				</div>	
+			</div>
+			<div class="col-md-4 noticias-single">
+				<div class="noticias-titulo col-md-10 col-md-10">
+					<h6>Noticia 1</h6>
+					<p>Bajada de la noticia</p>
+				</div>		
+			</div>
+			<div class="col-md-3 noticias-single">
+				<div class="noticias-titulo col-md-10 col-md-10">
+					<h6>Noticia 1</h6>
+					<p>Bajada de la noticia</p>
+				</div>		
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-3 noticias-single">
+				<div class="noticias-titulo col-md-10 col-md-10">
+					<h6>Noticia 1</h6>
+					<p>Bajada de la noticia</p>
+				</div>	
+			</div>
+			<div class="col-md-3 noticias-single">
+				<div class="noticias-titulo col-md-10 col-md-10">
+					<h6>Noticia 1</h6>
+					<p>Bajada de la noticia</p>
+				</div>	
+			</div>
+			<div class="col-md-6 noticias-single">
+				<div class="noticias-titulo col-md-10 col-md-10">
+					<h6>Noticia 1</h6>
+					<p>Bajada de la noticia</p>
+				</div>	
+			</div>
+		</div>
 	</section>
 <!-- FIN NOTICIAS -->
 
