inicio pop up numero telefono

--- a/index.html
+++ b/index.html
@@ -395,10 +395,10 @@
 			<div class="col">
 				<div class="row footer-links">
 					<div class="col">
-						<h6>
+						<h6 class="btn-abrir-numero">
 							<a href="#">Número de teléfono</a> 
 						</h6>
-						<h6>
+						<h6 class="btn-abrir-email">
 							<a href="#">Email</a> 
 						</h6>
 						<h6>
@@ -438,6 +438,17 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- contenedor pop up -->
+		<div class="overlay">
+			<div class="popup">
+				<a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup">
+					<i class="fas fa-times"></i>
+				</a>
+				<h3>Número de telefono</h3>
+			</div>
+		</div>
+		<!-- fin contenedor pop up  -->
 	</footer>
 	<div class="container-fluid copyright">
 		<p>Copyright <a href="">Muelle Digital</a></p> 
