--- a/index.html
+++ b/index.html
@@ -395,11 +395,15 @@
 			<div class="col">
 				<div class="row footer-links">
 					<div class="col">
-						<h6 class="btn-abrir-numero">
-							<a href="#">Número de teléfono</a> 
+						<h6>
+							<a class="btn-abrir" id="btn-abrir" href="#">
+								Número de teléfono
+							</a> 
 						</h6>
-						<h6 class="btn-abrir-email">
-							<a href="#">Email</a> 
+						<h6>
+							<a class="btn-abrir" id="btn-abrir" href="#">
+								Email
+							</a> 
 						</h6>
 						<h6>
 							<a href="#">Sucursales</a> 
@@ -440,12 +444,13 @@
 		</div>
 
 		<!-- contenedor pop up -->
-		<div class="overlay">
-			<div class="popup">
-				<a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup">
-					<i class="fas fa-times"></i>
+		<div class="overlay" id="overlay">
+			<div class="popup" id="popup">
+				<a href="#">
+					<i id="btn-cerrar-popup" class="fas fa-times"></i>
 				</a>
 				<h3>Número de telefono</h3>
+				<h3>Email</h3>
 			</div>
 		</div>
 		<!-- fin contenedor pop up  -->
@@ -457,6 +462,7 @@
 
 	
 	<script src="assets/js/lib/jquery-3.3.1.js"></script>
+	<script src="assets/js/scripts.js"></script>
 	<script src="assets/js/lib/popper.min.js"></script>
 	<script src="assets/js/lib/bootstrap.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
