--- a/usados.html
+++ b/usados.html
@@ -795,10 +795,14 @@
 				<div class="row footer-links">
 					<div class="col">
 						<h6>
-							<a href="#">Número de teléfono</a> 
+							<a class="btn-abrir" id="btn-abrir" href="#">
+								Número de teléfono
+							</a> 
 						</h6>
 						<h6>
-							<a href="#">Email</a> 
+							<a class="btn-abrir" id="btn-abrir" href="#">
+								Email
+							</a> 
 						</h6>
 						<h6>
 							<a href="#">Sucursales</a> 
@@ -837,6 +841,18 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- contenedor pop up -->
+		<div class="overlay" id="overlay">
+			<div class="popup" id="popup">
+				<a href="#">
+					<i id="btn-cerrar-popup" class="fas fa-times"></i>
+				</a>
+				<h3>Número de telefono</h3>
+				<h3>Email</h3>
+			</div>
+		</div>
+		<!-- fin contenedor pop up  -->
 	</footer>
 	<div class="container-fluid copyright">
 		<p>Copyright <a href="">Muelle Digital</a></p> 
