enlace scripts en todas las páginas

--- a/index.html
+++ b/index.html
@@ -396,12 +396,12 @@
 				<div class="row footer-links">
 					<div class="col">
 						<h6>
-							<a class="btn-abrir" id="btn-abrir" href="#">
+							<a class="btn-abrir" href="#">
 								Número de teléfono
 							</a> 
 						</h6>
 						<h6>
-							<a class="btn-abrir" id="btn-abrir" href="#">
+							<a class="btn-abrir" href="#">
 								Email
 							</a> 
 						</h6>
@@ -444,10 +444,10 @@
 		</div>
 
 		<!-- contenedor pop up -->
-		<div class="overlay" id="overlay">
-			<div class="popup" id="popup">
+		<div class="overlay">
+			<div class="popup">
 				<a href="#">
-					<i id="btn-cerrar-popup" class="fas fa-times"></i>
+					<i class="fas fa-times btn-cerrar-popup"></i>
 				</a>
 				<h3>Número de telefono</h3>
 				<h3>Email</h3>
