--- a/sucursales.html
+++ b/sucursales.html
@@ -410,10 +410,10 @@
 		</div>
 
 		<!-- contenedor pop up -->
-		<div class="overlay" id="overlay">
-			<div class="popup" id="popup">
+		<div class="overlay">
+			<div class="popup">
 				<a href="#">
-					<i id="btn-cerrar-popup" class="fas fa-times"></i>
+					<i class="fas fa-times btn-cerrar-popup"></i>
 				</a>
 				<h3>Número de telefono</h3>
 				<h3>Email</h3>
@@ -426,6 +426,7 @@
 	</div>
 	
 	<script src="assets/js/lib/jquery-3.3.1.js"></script>
+	<script src="assets/js/scripts.js"></script>
 	<script src="assets/js/lib/popper.min.js"></script>
 	<script src="assets/js/lib/bootstrap.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">	
