--- a/index.html
+++ b/index.html
@@ -82,15 +82,22 @@
 			<div class="col-md-4 visible-lg visible-md">
 
 					<ul class="nav nav-tabs">
-			        	<li class="active"><a data-toggle="tab" href="#home">Cotiza Ahora</a></li>
-			        	<li><a data-toggle="tab" href="#menu1">Agendar Servicio Técnico</a></li>
+			        	<li class="active">
+			        		<a data-toggle="tab" href="#home">
+			        			<h4>Cotiza Ahora</h4>
+			        		</a>
+			        	</li>
+			        	<li>
+			        		<a data-toggle="tab" href="#menu1">
+			        		 <h4>Agendar Servicio Técnico</h4>
+			        		</a>
+			        	</li>
 		      		</ul>
 			     
 			    <div class="tab-content">
 			        <div id="home" class="tab-pane fade in active show">
 			          <form class="col" action="cotizar.php" method="POST" onsubmit="return formulario(this)">
-			                <h2>Cotiza</h2>
-
+			           
 			                <div class="form-group label_50 row">
 			                	<div class="col columna-sistema">
 			                		<label>Marca a Cotizar</label>
