--- a/index.html
+++ b/index.html
@@ -142,19 +142,21 @@
 			                  <input type="email" class="form-control" placeholder="Ingrese un correo válido" name="email" id="email"  >
 			                </div>
 
-			                <div class="form-group label_50-2">
-			                  <label>Teléfono</label>
-			                  <input type="number" class="form-control"  placeholder="Ingrese su teléfono" name="telefono" id="telefono" >
+			                <div class="form-group label_50-2 row">
+			                	<div class="col columna-sistema">
+			               			<label>Teléfono</label>
+			                  		<input type="number" class="form-control"  placeholder="Ingrese su teléfono" name="telefono" id="telefono" >
+			                	</div>
+			                  <div class="col columna-sistema">
+			                  		<label>Comuna</label>
+			                    	<select name="comunas" id="comunas" class="form-control">
+			                     	<option value="0"></option>
+			                    	</select>
+			                  </div>
 			                </div>
-
-			                <div class="form-group label_50-2">
-			                  <label>Comuna</label>
-			                    <select name="comunas" id="comunas" class="form-control">
-			                      <option value="0"></option>
-			                    </select>
-			                </div>
-
-			                <button type="submit" onClick="ga('send', 'event', 'Boton', 'Click');" class="btn btn-primary label_50-2">Cotizar</button>
+			                	<br>
+			                	 <button type="submit" onClick="ga('send', 'event', 'Boton', 'Click');" class="btn btn-primary label_50-2">Cotizar</button>
+			              
 			          </form>
 			        </div>
 
