--- a/index.html
+++ b/index.html
@@ -82,20 +82,21 @@
 			<div class="col-md-4 visible-lg visible-md">
 
 				<div class="sistema-caja">
-					<ul class="nav nav-tabs titulos-system">
-			        	<li class="active">
-			        		<a data-toggle="tab" href="#home">
-			        			<h4>Cotiza Ahora</h4>
-			        		</a>
-			        	</li>
-			        	<li>
-			        		<a data-toggle="tab" href="#menu1">
-			        		 <h4>Agendar Servicio Técnico</h4>
-			        		</a>
-			        	</li>
-		      		</ul>
+					<div class="sistema-caja-gris">
+						<ul class="nav nav-tabs titulos-system">
+			        		<li class="active">
+			        			<a data-toggle="tab" href="#home">
+			        				<h4>Cotiza Ahora</h4>
+			        			</a>
+			        		</li>
+			        		<li>
+			        			<a data-toggle="tab" href="#menu1">
+			        		 		<h4>Agendar Servicio Técnico</h4>
+			        			</a>
+			        		</li>
+		      			</ul>
 			     
-				    <div class="tab-content">
+				   	 	<div class="tab-content">
 				        <div id="home" class="tab-pane fade in active show">
 				          <form class="col" action="cotizar.php" method="POST" onsubmit="return formulario(this)">
 
@@ -219,7 +220,8 @@
 					              	</div>       
 				          </form>
 				        </div>     
-				    </div>
+				    	</div>
+					</div>
 				</div>				
 			</div>
 		</div><!-- -- fin del row -->
