--- a/index.html
+++ b/index.html
@@ -83,18 +83,20 @@
 
 				<div class="sistema-caja">
 					<div class="sistema-caja-gris">
-						<ul class="nav nav-tabs titulos-system">
-			        		<li class="active">
-			        			<a data-toggle="tab" href="#home">
-			        				<h4>Cotiza Ahora</h4>
-			        			</a>
-			        		</li>
-			        		<li>
-			        			<a data-toggle="tab" href="#menu1">
-			        		 		<h4>Agendar Servicio Técnico</h4>
-			        			</a>
-			        		</li>
-		      			</ul>
+						<div class="titulos-sistema-caja">
+							<ul class="nav nav-tabs titulos-system">
+				        		<li class="active">
+				        			<a data-toggle="tab" href="#home">
+				        				<h4>Cotiza Ahora</h4>
+				        			</a>
+				        		</li>
+				        		<li>
+				        			<a data-toggle="tab" href="#menu1">
+				        		 		<h4>Agendar Servicio Técnico</h4>
+				        			</a>
+				        		</li>
+		      				</ul>
+						</div>
 			     
 				   	 	<div class="tab-content">
 				        <div id="home" class="tab-pane fade in active show">
@@ -149,9 +151,7 @@
 					                    </select>
 				                	</div>
 				                </div>
-
-				                	<br>
-				                	 <button type="submit" onClick="ga('send', 'event', 'Boton', 'Click');" class="btn btn-primary label_50-2">Cotizar</button>
+				                	<button type="submit" onClick="ga('send', 'event', 'Boton', 'Click');" class="btn btn-primary boton-enviar-sistema">Cotizar</button>
 				              
 				          </form>
 				        </div>
